client/app/App.less
/* Fonts */
@font-serif: 'Tinos', serif;
@font-san-serif: 'Helvetica Neue', Arial, san-serif;

/* Colors */
@background-gray: #fafafa;
@light-gray: #eee;
@light-gray-2: #d8d8d8;
@light-gray-3: #eaeaea;
@inactive-gray: #d2d2d2;
@gray: #979797;
@gray-2: #bbbbbb;
@dark-gray: #5e5e5e;
@black: #2b2b2b;
@bright-blue: #33a2cc;
@red: #da2a54;
@white: #fff;

/* Spacing */
@margin-default: 16px;

/* Base CSS */
* {
  box-sizing: border-box;
}

html,
body,
.app {
  background-color: @background-gray;
  height: 100%;
  font-family: @font-san-serif;
  font-size: 18px;
  font-weight: 300;
  margin: 0;
}

input,
textarea {
  font-family: @font-san-serif;
}

h1,
h2,
h3,
h4,
h5 {
  font-family: @font-san-serif;
  letter-spacing: 0.4px;
  margin-top: 8px;
  margin-bottom: @margin-default;
}

h1 {
  font-size: 44px;
  font-weight: 100;
}

h2 {
  font-size: 36px;
  font-weight: 300;
}

h3 {
  font-size: 28px;
  font-weight: 400;
}

h4 {
  font-size: 24px;
  font-weight: 500;
}

h5 {
  font-size: 16px;
  font-weight: 400;
}

a {
  color: @bright-blue;
  text-decoration: none;
}

.leaflet-container {
  height: 720px;
  width: 100%;
  margin: 0 auto;
}

.btn-default,
.btn-primary,
.btn-link {
  border-radius: 2px;
  box-shadow: none;
  font-size: 18px;
  font-weight: 500;
  letter-spacing: 0.4px;
  padding: 12px 24px;

  &.-sm {
    font-size: 16px;
    font-weight: 300;
  }

  &.-wide {
    width: 100%;
  }

  &.-faded {
    opacity: 0.6;
  }

  &:hover {
    cursor: pointer;
    opacity: 1;
  }

  &:focus {
    outline: 0;
  }

  &:disabled {
    border-color: @gray-2;
    background-color: @gray-2;
    cursor: not-allowed;
  }
}

.btn-default {
  background: @light-gray-3;
  border: 1px solid @light-gray-3;
  color: @dark-gray;

  &:hover {
    background: @light-gray;
  }

  &:active {
    border-color: @light-gray;
  }
}

.btn-primary {
  background: @bright-blue;
  border: 1px solid @bright-blue;
  color: @white;
}

.btn-link {
  background: transparent;
  border: none;
  color: @gray-2;

  &.-primary {
    color: @bright-blue;
  }
}

.label-default {
  font-family: @font-san-serif;
  font-size: 12px;
  letter-spacing: 0.4px;
}

.input-default {
  border: 1px solid @gray;
  border-radius: 4px;
  display: block;
  font-size: 18px;
  font-weight: 300;
  padding: 12px;

  &.-wide {
    width: 100%;
  }

  &.-inline {
    display: inline-block;
    margin-right: @margin-default;
  }

  &.-lg {
    font-size: 24px;
  }

  &:focus {
    border-color: @black;
    outline: 0;
  }
}

.unselectable {
  -moz-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.hidden {
  display: none;
  visibility: hidden;
}

.clearfix {
  &::after {
    display: block;
    content: '';
    clear: both;
  }
}

.pull-left {
  float: left;
}

.pull-right {
  float: right;
}

.default-container {
  max-width: 840px;
  margin: 40px auto;
  padding: 0px 40px;
}

.text-light {
  font-weight: 100;
}

.text-ellipsis {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.text-blue {
  color: @bright-blue;
}

.text-red {
  color: @red;
}

.text-center {
  text-align: center;
}

@media (max-width: 480px) {
  .default-container {
    padding: 0px 16px;
  }
}

